fix: rename Visualizations to View

--- a/public/index.pug
+++ b/public/index.pug
@@ -32,7 +32,7 @@ html(lang="en")
               a(ui-sref="lists") Saved Lists 
                 sup (beta)
             //- li
-            //-   a(ui-sref="visualizations") Visualizations
+            //-   a(ui-sref="visualizations") View
             //-     sup (beta)
                               
           ul.nav.navbar-nav.navbar-right(ng-show="currentUser")
