fix: rename Explore to Survey

--- a/public/index.pug
+++ b/public/index.pug
@@ -26,7 +26,7 @@ html(lang="en")
             li
               a(ui-sref="search") Search
             li
-              a(ui-sref="explore") Explore 
+              a(ui-sref="explore") Survey 
                 sup (beta)
             li
               a(ui-sref="lists") Saved Lists 
