--- a/public/error.pug
+++ b/public/error.pug
@@ -18,7 +18,7 @@ html(lang="en")
         .collapse.navbar-collapse
           ul.nav.navbar-nav
             li
-              a(ui-sref="explore") Explore
+              a(ui-sref="explore") Survey
             li
               a(ui-sref="search") Search
                               
