fix: re-add visualizations for now

--- a/public/index.pug
+++ b/public/index.pug
@@ -31,9 +31,9 @@ html(lang="en")
             li
               a(ui-sref="lists") Saved Lists 
                 sup (beta)
-            //- li
-            //-   a(ui-sref="visualizations") View
-            //-     sup (beta)
+            li
+              a(ui-sref="visualizations") View
+                sup (beta)
                               
           ul.nav.navbar-nav.navbar-right(ng-show="currentUser")
             li(ng-show="currentUser.role=='admin'")
