--- a/public/components/search-field/free-search.pug
+++ b/public/components/search-field/free-search.pug
@@ -17,18 +17,28 @@
             .checkbox.option-checkbox
                 label
                     input.small(type="checkbox", ng-model="term.beginning")
-                    div.small.free-search-beginning-end match beginning of word
+                    div.small match beginning of word
             
             .checkbox.option-checkbox
                 label
                     input.small(type="checkbox", ng-model="term.end")
-                    div.small.free-search-beginning-end match end of word
+                    div.small match end of word
+
+            .checkbox.option-checkbox
+                label
+                    input.small(type="checkbox", ng-model="term.negative")
+                    div.small negative
 
             hr
 
     a.small.add-word(ng-click="freeSearchModel.terms.push({ value: '', beginning: true, end: true })") add word
     
     .clearfix
+    
+    div.btn-group.btn-group-xs.pull-right(style="margin-right: 5px; z-index: 999;")
+        button.btn.btn-default(type="button", ng-class="{'btn-primary': freeSearchModel.operator === 'or'}", ng-click="freeSearchModel.operator = 'or'") any
+        button.btn.btn-default(type="button", ng-class="{'btn-primary': freeSearchModel.operator === 'and'}", ng-click="freeSearchModel.operator = 'and'") all
+
     .checkbox(ng-repeat="section in freeSearchModel.sections")
         label
             input(type="checkbox", ng-model="section.checked")
