--- a/public/components/search-field/date-search.pug
+++ b/public/components/search-field/date-search.pug
@@ -14,8 +14,7 @@
         ng-model="dateModel.date.query.startMonth",
         placeholder="month ({{ counts.travel_month }} entries)",
         ng-class="{ filled : dateModel.date.query.startMonth }",
-        ng-show="dateModel.date.queryType === 'exact'",
-        ng-disabled="!dateModel.date.query.startYear && !dateModel.date.query.startMonth")
+        ng-show="dateModel.date.queryType === 'exact'")
     
     
     input.input-sm.form-control.margin-top(
@@ -31,8 +30,7 @@
         ng-model="dateModel.date.query.startMonth",
         placeholder="start month ({{ counts.travel_month }} entries)",
         ng-class="{ filled : dateModel.date.query.startMonth }",
-        ng-show="dateModel.date.queryType === 'range'",
-        ng-disabled="!dateModel.date.query.startYear && !dateModel.date.query.startMonth")
+        ng-show="dateModel.date.queryType === 'range'")
     
     input.input-sm.form-control.margin-top(
         type="text", 
@@ -47,8 +45,7 @@
         ng-model="dateModel.date.query.endMonth",
         placeholder="end month ({{ counts.travel_month }} entries)",
         ng-class="{ filled : dateModel.date.query.endMonth }",
-        ng-show="dateModel.date.queryType === 'range'",
-        ng-disabled="!dateModel.date.query.endYear && !dateModel.date.query.endMonth")
+        ng-show="dateModel.date.queryType === 'range'")
     
     .margin-top
         span.date-query-type.date-query-type-label search by: 
