--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -272,6 +272,7 @@
                 li.list-group-item(ng-repeat="e in entry.mentionedNames") 
                     div(ng-style="e.entry ? {'cursor': 'pointer'}: {'font-style': 'italic'}") {{ e.name }}
                       a.mentioned-names-logo(
+                        ng-show="e.entry",
                         ng-href="{{getMentionedNameSearchUrl(e.name)}}"
                       )
                         img(src="mentioned_names.png" width="20" height="20")
