--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -271,7 +271,7 @@
               ul.list-group
                 li.list-group-item(ng-repeat="e in entry.mentionedNames") 
                     div(ng-style="e.entry ? {'cursor': 'pointer'}: {'font-style': 'italic'}") {{ e.name }}
-                      //- a.btn.btn-default(type="button" class="btn-xs" ng-href="{{getMentionedNameSearchUrl(e.name)}}") View Mentions
+                      a.btn.btn-default(type="button" class="btn-xs" ng-href="{{getMentionedNameSearchUrl(e.name)}}") View Mentions
                     a.mentioned-names-popup(
                       ng-show="e.entry",
                       ng-href="{{ getEntryLink(e.entry.index) }}",
