--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -109,7 +109,7 @@
               ul.list-group
                 li.list-group-item
                   span(ng-show="entry.dates[0].deathDate")
-                      a(ng-click="search({deathDate:{startYear: entry.dates[0].deathDate, endYear: entry.dates[0].deathDate})",
+                      a(ng-click="search({deathDate:{startYear: entry.dates[0].deathDate, endYear: entry.dates[0].deathDate}})",
                         ng-bind-html="highlighted('deathDate', entry.dates[0].deathDate)"
                       )
                       span(ng-show="entry.dates[0].deathDateMarker")  ({{ entry.dates[0].deathDateMarker }})
