--- a/public/components/facet/facet.pug
+++ b/public/components/facet/facet.pug
@@ -27,8 +27,8 @@
           tr(ng-repeat="u in filtered = (uniques | filter:search | orderBy:sortingSelection) | limitTo:limit", ng-class="{ closed: !u.count }", ng-show="open || u.selected")
             td
               .checkbox
-                label(ng-class="{'explore-alternate-name': field === 'fullName' && u.parentFullName !== u._id, 'facet-crossed-out': u.negative}")
-                  input(type="checkbox", ng-model="u.selected", ng-change="refresh(u)", ng-disabled="!u.count")
+                label(ng-class="{'explore-alternate-name': field === 'fullName' && u.parentFullName !== u._id, 'facet-crossed-out': u.negative, 'facet-disabled': u.disabled}")
+                  input(type="checkbox", ng-model="u.selected", ng-change="!u.disabled && refresh(u)", ng-disabled="!u.count || u.disabled")
                   span {{u._id || "Unknown"}} 
                   span.text-light.pull-right {{u.count}}
                   span.alternate-name-see(ng-show="field === 'fullName' && u.parentFullName !== u._id") (see {{u.parentFullName}})
