--- a/public/explore/explore.pug
+++ b/public/explore/explore.pug
@@ -13,16 +13,25 @@
         .col-lg-2
           label Dimensions
           ul.list-unstyled
-            li.border-top(ng-repeat="dimension in dimensions",style="")
+            li.border-top(ng-repeat="dimension in dimensions",style="position:relative")
               span.small.text-light.pull-right.explore-count(title="{{ counts[dimension.field] }} entries have a value for this dimension.") {{ counts[dimension.field] }}
-              
-              .checkbox(style="",data-toggle="tooltip",data-placement="right",title="Filter by this field.")
+              div(ng-click="tooltip = dimension.field", style="position:absolute;right:-10px;top:5px;margin-left:4px;cursor:pointer;")
+                  span(style="font-weight:bold", ng-click="tooltip = dimension.field") •
+                  div.mentioned-names-popup(
+                        ng-mouseleave="(tooltip == dimension.field) && (tooltip = null)"
+                        ng-style="{'margin-left': '0px', 'margin-top': '-20px', display: 'block', opacity: tooltip == dimension.field ? '1': '0', 'z-index': tooltip == dimension.field ? 99: -1}"
+                  )
+                      //i(class="fa fa-times",style="top:10px;right:10px;position:absolute",ng-click="(tooltip == dimension.field) && (tooltip = null)")
+                      h4 {{ dimension.label }}
+                      p {{ dimension.description }}
+
+              .checkbox(style="")
                 label
                   input(type="checkbox", ng-model="dimension.active")
-                  div(ng-class="{ 'text-strong' : query.hasOwnProperty(dimension.field) }") {{dimension.label}}
+                  div(ng-class="{ 'text-strong' : query.hasOwnProperty(dimension.field) }")
+                      span {{dimension.label}}
                   span.small(ng-show="dimension.subgroup") {{dimension.subgroup}}
                   
-        
         .col-lg-10
           .clearfix.margin-bottom
             a.btn-xs.btn.btn-danger.pull-right(ng-click="clear()") Clear all
