Wording changes for GTE explorer page
Minor language changes for some terms.

--- a/public/components/search-field/free-search.pug
+++ b/public/components/search-field/free-search.pug
@@ -1,5 +1,5 @@
 .form-group
-    label Free search in the entries
+    label Word search in the entries
     div
         div.free-search-input(ng-repeat="term in freeSearchModel.terms track by $index")
             input.input-field.input-sm.form-control(
