--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -49,7 +49,7 @@
             typeahead-on-select="search()")
 
         .form-group
-          label Employments and Identifiers
+          label DBITI Employments & Identifiers
           input.input-sm.form-control(
             type="text", 
             ng-model="query.pursuits",
@@ -175,7 +175,7 @@
         hr
 
         .form-group
-          label Mentioned Names
+          label Mentioned names
           input.input-sm.form-control(
             type="text", 
             ng-model="query.mentionedNames",
@@ -188,7 +188,7 @@
         hr
 
         .form-group
-          label Travel Place
+          label Travel place
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.travelPlace",
@@ -199,7 +199,7 @@
             typeahead-on-select="search()")
 
         .form-group
-          label Travel Date
+          label Travel date
           date-search(data-field="travelDate")
 
         hr
