--- a/public/explore/explore.pug
+++ b/public/explore/explore.pug
@@ -11,10 +11,10 @@
     
       .row
         .col-lg-2
-          label Dimensions
+          label Filters
           ul.list-unstyled
             li.border-top(ng-repeat="dimension in dimensions",style="position:relative")
-              span.small.text-light.pull-right.explore-count(title="{{ counts[dimension.field] }} entries have a value for this dimension.") {{ counts[dimension.field] }}
+              span.small.text-light.pull-right.explore-count(title="{{ counts[dimension.field] }} entries have a value for this filter.") {{ counts[dimension.field] }}
               div(ng-click="tooltip = dimension.field", style="position:absolute;right:-10px;top:5px;margin-left:4px;cursor:pointer;")
                   span(style="font-weight:bold", ng-click="tooltip = dimension.field") •
                   div.mentioned-names-popup(
