--- a/public/register/register.pug
+++ b/public/register/register.pug
@@ -8,9 +8,9 @@
         .col-sm-9
           input.form-control(type="text", name="username", ng-model="user.username", placeholder="User name", required)
       .form-group
-        label.col-sm-3.control-label Full name
+        label.col-sm-3.control-label Traveler names
         .col-sm-9
-          input.form-control(type="text", name="fullname", ng-model="user.fullName", placeholder="Full name")
+          input.form-control(type="text", name="fullname", ng-model="user.fullName", placeholder="Traveler names")
       .form-group
         label.col-sm-3.control-label Password*
         .col-sm-9
