--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -13,7 +13,7 @@
           a.pull-right(ng-click="clear()") Clear all
 
         .form-group
-          label Full name
+          label Traveler names
           input.input-sm.form-control(
             type="text", 
             ng-model="query.fullName",
