--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -192,7 +192,7 @@
           input.input-sm.form-control(
             type="text", 
             ng-model="query.consolidated_notes",
-            placeholder="mentioned names ({{ counts.consolidated_notes }} entries)",
+            placeholder="footnotes ({{ counts.consolidated_notes }} entries)",
             ng-class="{ filled : query.consolidated_notes }"
             typeahead="item for item in getSuggestions('consolidated_notes', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
