--- a/public/admin/admin.pug
+++ b/public/admin/admin.pug
@@ -88,9 +88,9 @@
           .col-sm-9
             input.form-control(type="text", name="username", ng-model="user.username", placeholder="User name", required)
         .form-group
-          label.col-sm-3.control-label Traveler names
+          label.col-sm-3.control-label Full name
           .col-sm-9
-            input.form-control(type="text", name="fullname", ng-model="user.fullName", placeholder="Traveler names")
+            input.form-control(type="text", name="fullname", ng-model="user.fullName", placeholder="Full name")
         .form-group
           label.col-sm-3.control-label Password*
           .col-sm-9
@@ -138,7 +138,7 @@
           thead
             tr
               th Username
-              th Traveler names
+              th Full name
               th Email
               th Role
               th
