--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -13,7 +13,7 @@
           a.pull-right(ng-click="clear()") Clear all
 
         .form-group
-          label Full name
+          label Traveler names
           input.input-sm.form-control(
             type="text", 
             ng-model="query.fullName",
@@ -49,11 +49,11 @@
             typeahead-on-select="search()")
 
         .form-group
-          label Employments and Identifiers
+          label DBITI Employments & Identifiers
           input.input-sm.form-control(
             type="text", 
             ng-model="query.pursuits",
-            placeholder="pursuit ({{ counts.pursuits }} entries)",
+            placeholder="employment or identifier ({{ counts.pursuits }} entries)",
             ng-class="{ filled : query.pursuits }"
             typeahead="item for item in getSuggestions('pursuits.pursuit', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -175,7 +175,7 @@
         hr
 
         .form-group
-          label Mentioned Names
+          label Mentioned names
           input.input-sm.form-control(
             type="text", 
             ng-model="query.mentionedNames",
@@ -188,7 +188,7 @@
         hr
 
         .form-group
-          label Travel Place
+          label Travel place
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.travelPlace",
@@ -199,7 +199,7 @@
             typeahead-on-select="search()")
 
         .form-group
-          label Travel Date
+          label Travel date
           date-search(data-field="travelDate")
 
         hr
