--- a/public/components/facet/facet.pug
+++ b/public/components/facet/facet.pug
@@ -30,7 +30,7 @@
                 label(ng-class="{'explore-alternate-name': field === 'fullName' && u.parentFullName !== u._id, 'facet-crossed-out': u.negative, 'facet-disabled': u.disabled}")
                   input(type="checkbox", ng-model="u.selected", ng-change="!u.disabled && refresh(u)", ng-disabled="!u.count || u.disabled")
                   span {{u._id || "Unknown"}} 
-                  span.text-light.pull-right {{u.count}}
+                  span.text-light.pull-right {{(!u.negative && u.count !== 99999) ? u.count: ""}}
                   span.alternate-name-see(ng-show="field === 'fullName' && u.parentFullName !== u._id") (see {{u.parentFullName}})
           
           tr(ng-show="filtered.length > limit")
