AND/OR defaults and renaming (#137)
* defaults explorer, search, and free search (word search in the entries) to AND operator

Replaces "default-and" branch, which had changes merged from "language-changes" branch

* All/any renamed to and/or

--- a/public/components/search-field/free-search.pug
+++ b/public/components/search-field/free-search.pug
@@ -36,8 +36,8 @@
     .clearfix
     
     div.btn-group.btn-group-xs.pull-right(style="margin-right: 5px; z-index: 999;")
-        button.btn.btn-default(type="button", ng-class="{'btn-primary': freeSearchModel.operator === 'or'}", ng-click="freeSearchModel.operator = 'or'") any
-        button.btn.btn-default(type="button", ng-class="{'btn-primary': freeSearchModel.operator === 'and'}", ng-click="freeSearchModel.operator = 'and'") all
+        button.btn.btn-default(type="button", ng-class="{'btn-primary': freeSearchModel.operator === 'and'}", ng-click="freeSearchModel.operator = 'and'") and
+        button.btn.btn-default(type="button", ng-class="{'btn-primary': freeSearchModel.operator === 'or'}", ng-click="freeSearchModel.operator = 'or'") or
 
     .checkbox(ng-repeat="section in freeSearchModel.sections")
         label
