--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -335,7 +335,7 @@
                   tbody
                     tr(class="entry-travel" ng-repeat="travel in tour.values" ng-click="searchTravel(travel)" style="cursor: pointer;", ng-mouseenter="miniMapShared.travelHovered(travel)" ng-mouseleave="miniMapShared.travelUnhovered(travel)" ng-class="{'minimap-hovered': travel.hovered}")
                       td(ng-class="{'bordered':travel.parent}")
-                        span(ng-bind-html="highlighted('travel_place', travel)")
+                        span(ng-bind-html="highlighted('travelPlace', travel)")
                       td.text-right.tnum-lnum
                         span(ng-class="{'highlighted': highlightTravel(travel)}")
                           span(ng-show="!travel.travelStartYear") -
