--- a/public/components/search-field/free-search.pug
+++ b/public/components/search-field/free-search.pug
@@ -5,7 +5,7 @@
             input.input-field.input-sm.form-control(
                 type="text", 
                 ng-model="term.value",
-                placeholder="text ({{ counts.fullName }} entries)",
+                placeholder="text",
                 ng-class="{ filled: term.value }",
             )
             
