--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -17,7 +17,7 @@
           input.input-sm.form-control(
             type="text", 
             ng-model="query.fullName",
-            placeholder="Search ({{ counts.fullName }} entries)",
+            placeholder="name",
             ng-class="{ filled : query.fullName }"
             typeahead="item.nameMatch as item for item in getSuggestions('fullName', $viewValue)"
             typeahead-template-url="components/fullname-search-suggestion"
@@ -30,7 +30,7 @@
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.birthPlace",
-            placeholder="place ({{ counts.birthPlace }} entries)",
+            placeholder="place",
             ng-class="{ filled : query.birthPlace }"
             typeahead="item for item in getSuggestions('places.birthPlace', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -42,7 +42,7 @@
           input.input-sm.margin-top.form-control(
             type="text", 
             ng-model="query.deathPlace",
-            placeholder="place ({{ counts.birthPlace }} entries)",
+            placeholder="place",
             ng-class="{ filled : query.deathPlace }"
             typeahead="item for item in getSuggestions('places.deathPlace', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -53,7 +53,7 @@
           input.input-sm.form-control(
             type="text", 
             ng-model="query.pursuits",
-            placeholder="employment or identifier ({{ counts.pursuits }} entries)",
+            placeholder="employment or identifier",
             ng-class="{ filled : query.pursuits }"
             typeahead="item for item in getSuggestions('pursuits.pursuit', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -64,7 +64,7 @@
           input.input-sm.form-control(
             type="text", 
             ng-model="query.occupations",
-            placeholder="occupation ({{ counts.occupations }} entries)",
+            placeholder="occupation",
             ng-class="{ filled : query.occupations }"
             typeahead="item for item in getSuggestions('occupations.title', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -72,7 +72,7 @@
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.occupations_group",
-            placeholder="group ({{ counts.occupations_group }} entries)",
+            placeholder="group",
             ng-class="{ filled : query.occupations_group }"
             typeahead="item for item in getSuggestions('occupations.group', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -80,7 +80,7 @@
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.occupations_place",
-            placeholder="place ({{ counts.occupations_place }} entries)",
+            placeholder="place",
             ng-class="{ filled : query.occupations_place }"
             typeahead="item for item in getSuggestions('occupations.place', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -91,7 +91,7 @@
           input.input-sm.form-control(
             type="text", 
             ng-model="query.military",
-            placeholder="rank ({{ counts.military }} entries)",
+            placeholder="rank",
             ng-class="{ filled : query.military }"
             typeahead="item for item in getSuggestions('military.rank', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -103,7 +103,7 @@
           input.input-sm.form-control(
             type="text", 
             ng-model="query.societies",
-            placeholder="society ({{ counts.societies }} entries)",
+            placeholder="society",
             ng-class="{ filled : query.societies }"
             typeahead="item for item in getSuggestions('societies.title', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -111,7 +111,7 @@
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.societies_role",
-            placeholder="role ({{ counts.societies_role }} entries)",
+            placeholder="role",
             ng-class="{ filled : query.societies_role }"
             typeahead="item for item in getSuggestions('societies.role', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -123,7 +123,7 @@
           input.input-sm.form-control(
             type="text", 
             ng-model="query.exhibitions",
-            placeholder="institution ({{ counts.exhibitions }} entries)",
+            placeholder="institution",
             ng-class="{ filled : query.exhibitions }"
             typeahead="item for item in getSuggestions('exhibitions.title', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -131,7 +131,7 @@
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.exhibitions_activity",
-            placeholder="activity ({{ counts.exhibitions_activity }} entries)",
+            placeholder="activity",
             ng-class="{ filled : query.exhibitions_activity }"
             typeahead="item for item in getSuggestions('exhibitions.activity', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -142,7 +142,7 @@
           input.input-sm.form-control(
             type="text", 
             ng-model="query.education_institution",
-            placeholder="institution ({{ counts.education_institution }} entries)",
+            placeholder="institution",
             ng-class="{ filled : query.education_institution }"
             typeahead="item for item in getSuggestions('education.institution', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -150,7 +150,7 @@
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.education_place",
-            placeholder="place ({{ counts.education_place }} entries)",
+            placeholder="place",
             ng-class="{ filled : query.education_place }"
             typeahead="item for item in getSuggestions('education.place', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -158,7 +158,7 @@
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.education_teacher",
-            placeholder="teacher ({{ counts.education_teacher }} entries)",
+            placeholder="teacher",
             ng-class="{ filled : query.education_teacher }"
             typeahead="item for item in getSuggestions('education.teacher', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -166,7 +166,7 @@
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.education_degree",
-            placeholder="degree ({{ counts.education_degree }} entries)",
+            placeholder="degree",
             ng-class="{ filled : query.education_degree }"
             typeahead="item for item in getSuggestions('education.fullDegree', $viewValue)"
             typeahead-min-length="2", typeahead-wait-ms="100"
@@ -179,7 +179,7 @@
           input.input-sm.form-control(
             type="text", 
             ng-model="query.mentionedNames",
-            placeholder="mentioned names ({{ counts.mentionedNames }} entries)",
+            placeholder="name",
             ng-class="{ filled : query.mentionedNames }"
             typeahead="item for item in getSuggestions('mentionedNames.name', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -192,7 +192,7 @@
           input.input-sm.form-control(
             type="text", 
             ng-model="query.consolidated_notes",
-            placeholder="footnotes ({{ counts.consolidated_notes }} entries)",
+            placeholder="footnote",
             ng-class="{ filled : query.consolidated_notes }"
             typeahead="item for item in getSuggestions('consolidated_notes', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
@@ -205,7 +205,7 @@
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.travelPlace",
-            placeholder="place ({{ counts.travelPlace }} entries)",
+            placeholder="place",
             ng-class="{ filled : query.travelPlace }"
             typeahead="item for item in getSuggestions('places.travelPlace', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
