Footnotes label changed to Sources

--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -188,7 +188,7 @@
         hr
 
         .form-group
-          label Footnotes
+          label Sources
           input.input-sm.form-control(
             type="text", 
             ng-model="query.consolidated_notes",
