User design things

--- a/public/components/entry-list/entry-list.pug
+++ b/public/components/entry-list/entry-list.pug
@@ -25,7 +25,7 @@
     
     div.btn-group.add-to-list-btn(ng-show="isSavedListView")
       button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
-        span import
+        span add by id
         span.caret
       ul.dropdown-menu
         li
